Fix alignment of Orders

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -219,7 +219,6 @@ span.googleButtonText {
 .profile .header{
   border-bottom: 1px solid grey;
   margin:24px;
-  color: #0f7d80;
   background: #ffe6de ;
 }
 
